--- a/webservice/templates/campaign_sheet.html
+++ b/webservice/templates/campaign_sheet.html
@@ -59,9 +59,16 @@
   </thead>
   <tbody>
     {%for row in datarows %}
+    {% set outer_loop = loop %}
+
       <tr>
          {%for col in range(0, columns|count) %}
-            {% if columns[col][:4] == 'exit' %}
+            {% if columns[col] == 'efficiency%' %}
+              <td><a href="{{pomspath}}/jobs_eff_histo?campaign_id={{campaign_id}}&tmax={{row[1][:10]}} 23:59:59">{{row[col]}}</a></td>
+            {% elif columns[col] == 'pending' %}
+              <td><a href="{{pomspath}}/show_dimension_files?experiment={{experiment}}&dims={{dimlist[outer_loop.index0]}}">{{row[col]}}</a></td>
+            
+            {% elif columns[col][:4] == 'exit' %}
               <td><a href="{{pomspath}}/job_table?user_exe_exit_code={{columns[col][5:-1]}}&tdays=1&tmax={{row[1][:10]}} 23:59:59&campaign_id={{campaign_id}}">{{row[col]}}</a></td>
             {% elif columns[col][:4] == 'jobs' %}
               <td><a href="{{pomspath}}/job_table?tdays=1&tmax={{row[1][:10]}} 23:59:59&campaign_id={{campaign_id}}">{{row[col]}}</a></td>
