adds version tag to ui

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -373,16 +373,14 @@ function validateQuickSearchForm(formid)
 
 
                         </div>
-                        
+
                     </div>  <!--ends main ui intro container-->
                     
                     
-                    
-                    
+                    <div class="ui mini label" style="float:right;">{{version}}</div>
                     
                     
                 </div>  <!--ends article-->
-                
                 
                 
                 
@@ -395,7 +393,6 @@ function validateQuickSearchForm(formid)
                         
             
             
-        
             
 
         </div>  <!--ends pusher-->
@@ -452,7 +449,6 @@ $('.tbox_delayed')
 ;
 
 </script>
-
 
 
 
