--- a/webservice/templates/jobs_eff_histo.html
+++ b/webservice/templates/jobs_eff_histo.html
@@ -50,14 +50,12 @@
      {% for row in range(10) %}
         <div class="row" style="width: 100%; height: 2em; position: relative;">
            <div "postion: absolute; top: 0; left: 0; width:4em; text-align: right;">{{row|int}}0-{{row|int}}9%</div> 
-           <a href="job_table?eff_d={{row}}&campaign_id={{campaign_id}}&tmax={{tmaxs}}&tdays={{tdays}}"><div style="position: absolute; top:0; left: 4em;  background: #808080; width:{{vals.get(row,0)}}0px;color: #ffffff;">{{vals.get(row,0)}}</div></a>
+           <a href="job_table?eff_d={{row}}&campaign_id={{campaign_id}}&tmax={{tmaxs}}&tdays={{tdays}}"><div style="position: absolute; top:0; left: 4em;  background: #808080; width:{{0.6+vals.get(row,0) * 60 / maxv}}em;color: #ffffff;">{{vals.get(row,0)}}</div></a>
        </div>
      {% endfor %}
      </div>
      Note: jobs without cpu time/wallclock time in Condor stats are omitted.
   </div>
-
-
 
 
 
