adds ability to sign out of app

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -331,10 +331,28 @@ function validateQuickSearchForm(formid)
 
 
                     {% if current_experimenter is defined %}
-                       <div class="ui right floated segment">
+                       <div class="ui right floated segment" id="auth_info" style="z-index: 1">
                        <i class="user icon"></i>
                        {{current_experimenter.first_name}} {{current_experimenter.last_name}}
+
+                           <div class="ui dimmer">
+                             <div class="content">
+                               <div class="center">
+                                 <div class="ui small primary button" id="sign_out"> <i class="sign out icon"></i> Sign Out</div>
+                               </div>
+                             </div>
+                           </div>
+
                        </div>
+
+
+
+<script>
+$( "#sign_out" ).click(function() {
+  window.location.href="sign_out"
+});
+</script>
+
                     {% endif %}
                         <div class="ui container">
                             <div class="introduction">
@@ -451,6 +469,10 @@ $('.tbox_delayed')
 </script>
 
 
+
+<script>
+$( document ).ready(function() { $('#auth_info').dimmer({on: 'hover'}); });
+</script>
 
 
                                 
