--- a/webservice/templates/campaign_edit.html
+++ b/webservice/templates/campaign_edit.html
@@ -32,20 +32,42 @@
 {%block content%}
 <form id="campaign_form" class="ui form" action="campaign_edit" method="POST">
 
-  <select class="ui dropdown" name="experiment" id="c_experiment">
-    <option value="">Choose Experiment</option>
-    {% for row in data.exp_selections %}
-    <option value="{{row.experiment}}" {{ 'selected="selected"' if (data.curr_experiment == row.experiment) }}>{{row.name}}</option>
-    {% endfor %}
-  </select>
+  <div class="inline fields">
+    <select class="ui dropdown" name="experiment" id="c_experiment">
+      <option value="">Choose Experiment</option>
+      {% for row in data.exp_selections %}
+      <option value="{{row.experiment}}" {{ 'selected="selected"' if (data.curr_experiment == row.experiment) }}>{{row.name}}</option>
+      {% endfor %}
+    </select>
+    &nbsp;&nbsp;&nbsp;
+    <div class="field">
+      <div class="ui radio checkbox">
+        <input type="radio" name="state" id="state_active" value="state_active" {{ 'checked="checked"' if (data.state is not defined or data.state == "state_active")  }}>
+        <label>Active</label>
+      </div>
+    </div>
+    <div class="field">
+      <div class="ui radio checkbox">
+        <input type="radio" name="state" id="state_inactive" value="state_inactive" {{ 'checked="checked"' if (data.state == "state_inactive")  }}>
+        <label>Inactive</label>
+      </div>
+    </div>
+    <div class="field">
+      <div class="ui radio checkbox">
+        <input type="radio" name="state" id="state_all" value="state_all" {{ 'checked="checked"' if (data.state == "state_all")  }}>
+        <label>All</label>
+      </div>
+    </div>
+  </div>
 
+  
   {% if data.curr_experiment is defined %} 
-  <table class="ui sortable celled table">
+  <table class="ui sortable single line celled table">
     <thead>
       <tr>
 	<th></th>
 	<th>Name</th>
-        <th>Act<br>ive</th>
+        <th>Active</th>
 	<th>VO Role</th>
 	<th>Software Version</th>
 	<th>Dataset</th>
@@ -60,7 +82,8 @@
 	<td class="collapsing">
           {% if data.authorized==True %}
 	  <i class="large edit link blue icon"  onclick="edit_campaign({{loop.index}});"></i>
-	  <i class="large trash link blue icon" onclick="delete_campaign('{{row.name}}');"></i>
+	  <i class="large copy icon link blue icon" onclick="edit_campaign({{loop.index}},'CLONE');"></i>
+	  <i class="large trash link blue icon" onclick="delete_campaign('{{row.name}}',{{row.campaign_id}});"></i>
 	  {% else %}
 	  <i class="large unhide link blue icon" onclick="edit_campaign({{loop.index}});">
 	  {% endif %}
@@ -421,6 +444,15 @@ $("#edit_param_modal_btn").click(function() {
     }).modal('show');
 });
 
+$("input[name=state]").click(function() {
+  // Trigger a form submit when an experiment is selected
+  // and the radio button was changed.
+  var exp_val = $("#c_experiment").val();
+  if (exp_val !== "") {
+    $("#campaign_form").submit();
+  }
+});
+
 $("#edit_depends_modal_btn").click(function() {
   //mwm
   var depends = $("#ae_depends").val();
@@ -558,24 +590,35 @@ function ep_down_button(current_row) {
   } 
 }
 		  
-function delete_campaign(name) {
-  var cname = name; 
-  $("#confirm_modal_message").text("Delete the campaign named " +name+" ?")
+function delete_campaign(name,campaign_id) {
+  var cname = name;
+  $("#confirm_modal_message").text("Delete the campaign named " +name+" ?");
   $("#confirm_modal").modal({
   closable  : false,
   onApprove : function(){
     $("#action").val('delete');
+    $("<input>").attr({'type':'hidden','name': 'campaign_id', 'value': campaign_id}).appendTo("#campaign_form");
     $("<input>").attr({'type':'hidden','name': 'name', 'value': cname}).appendTo("#campaign_form");
     $("#campaign_form").submit();
   },
   }).modal('show');
 }
 
-function edit_campaign(index) {
+function edit_campaign(index,clone) {
+  if (typeof clone === 'undefined') {
+    $("#ae_definition_action").val("edit");
+    $("#ae_campaign_name").val( $("#c_name_"+index).text() );
+    $("#ae_depends").val( $("#c_depends_"+index).text() );
+    $("#ae_depends_text").val( $.trim( $("#c_depends_"+index).text() ));
+  } else {
+    $("#ae_definition_action").val("add");
+    $("#ae_campaign_name").val( "CLONE OF: " + $("#c_name_"+index).text() );
+    // campaign_depends records are NOT cloned.
+    $("#ae_depends").val( "[]" );  
+    $("#ae_depends_text").val( "[]" );
+  }
   $("#ae_experiment").text("Campaign Editor  ({{ data.curr_experiment if data.curr_experiment is defined}})");
-  $("#ae_definition_action").val("edit");
   $("#ae_campaign_id").val( $("#c_campaign_id_"+index).text()  );
-  $("#ae_campaign_name").val( $("#c_name_"+index).text() );
   $("#ae_active").val( $("#c_active_"+index).text() );
   $("#ae_vo_role").val( $("#c_vo_role_"+index).text() );
   $("#ae_software_version").val( $("#c_software_version_"+index).text() );
@@ -583,8 +626,6 @@ function edit_campaign(index) {
   $("#ae_split_type").val( $("#c_split_type_"+index).text() );
   $("#ae_param_overrides_text").val( $("#c_param_overrides_"+index).text() );
   $("#ae_param_overrides_text").val( $("#c_param_overrides_"+index).text() );
-  $("#ae_depends").val( $("#c_depends_"+index).text() );
-  $("#ae_depends_text").val( $.trim( $("#c_depends_"+index).text() ));
   $("#ae_campaign_definition_id").val( $("#c_campaign_definition_id_"+index).text() );
   $("#ae_launch_id").val( $("#c_launch_id_"+index).text() );
   // Trigger the change function which will load associated fields
